SmokeTest is ok #6

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -24,10 +24,16 @@
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">src</directory>
+            <exclude>
+                <file>Kernel.php</file>
+                <directory>./src/Entity</directory>
+                <directory>./src/DataFixtures</directory>
+            </exclude>
         </whitelist>
     </filter>
 
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+        <listener class="\DAMA\DoctrineTestBundle\PHPUnit\PHPUnitListener" />
     </listeners>
 </phpunit>
